<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="tap_to_favorite">Tap to Favorite</string>
    <string name="powerstat">Powerstat</string>
    <string name="biography">Biography</string>
    <string name="appearance">Appearance</string>
    <string name="additional">Additional</string>
    <string name="strength">Strength</string>
    <string name="speed">Speed</string>
    <string name="durability">Durability</string>
    <string name="power">Power</string>
    <string name="combat">Combat</string>
    <string name="intelligence">Intelligence</string>
    <string name="full_name">Full Name</string>
    <string name="alter_ego">Alter Ego</string>
    <string name="place_of_birth">Place of Birth</string>
    <string name="first_appearance">First Appearance</string>
    <string name="publisher">Publisher</string>
    <string name="alignment">Alignment</string>
    <string name="gender">Gender</string>
    <string name="race">Race</string>
    <string name="height">Height</string>
    <string name="weight">Weight</string>
    <string name="eye_color">Eye Color</string>
    <string name="hair_color">Hair Color</string>
    <string name="work">Work</string>
    <string name="occupation">Occupation</string>
    <string name="base">Base</string>
    <string name="connections">Connections</string>
    <string name="group_affiliation">Group Affiliation</string>
    <string name="relatives">Relatives</string>
</resources>